Fix scrollbars

--- a/src/main/resources/static/style/master.css
+++ b/src/main/resources/static/style/master.css
@@ -13,7 +13,13 @@ body {
     font-family: Roboto, serif;
     font-weight: bold;
     margin: 0px;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 0;
+    height: 0px;
 }
 
 a {
